--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  *= require bootstrap
- *= require themify-icons
+ *= require font-awesome
  *= require flexslider
  *= require lightbox.min
  *= require ytplayer
