--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -14,7 +14,7 @@
               <div class="tab-title">
                 <span>BIO</span>
               </div>
-              <div class="tab-content">
+                <div class="tab-content">
                 <p>
                   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores.
                 </p>
@@ -35,9 +35,29 @@
                 <span>PAYMENT</span>
               </div>
               <div class="tab-content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est.
+                <p class="mb8">
+                  Enter Your Bank Account Info In Order To Recieve Compensation For Your Referrals.
                 </p>
+                <%#= text_field_tag :country, '', placeholder: 'Account\'s Country', 'data-stripe': 'number' %>
+                <%= form_tag update_bank_account_path(id: current_account.id), method: :patch do %>
+                  <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <%= text_field_tag :routing_number, nil, placeholder: 'Routing Number', 'data-stripe': 'routing_number', class:'input-control' %>
+                        </div>
+                        <div class="col-md-6">
+                          <%= text_field_tag :account_number, nil, placeholder: 'Account Number', 'data-stripe': 'account_number', class:'input-control' %>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                          <%= submit_tag "Add Bank Account", class: 'input-control' %>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
               </div>
             </li>
             <li>
@@ -96,7 +116,7 @@
                         <!-- Email-Referrals -->
                         <div class="col-md-6">
                           <div class="tab-title">
-                            <i class="icon ti-email"></i>
+                            <i class="icon fa fa-envelope-o"></i>
                             <span>E-mail</span>
                           </div>
                           <%= text_field_tag :email_refers, '', id:'tags_email_refers' %>
@@ -106,7 +126,7 @@
                         <!-- Phone-Referrals -->
                         <div class="col-md-6">
                           <div class="tab-title">
-                            <i class="icon ti ti-mobile"></i>
+                            <i class="icon fa fa-mobile"></i>
                             <span>TEXT</span>
                           </div>
                           <%= text_field_tag :text_refers, '', id:'tags_text_refers' %>
@@ -317,38 +337,40 @@
 -->
 
 <%= content_for :js_includes do %>
-<%= javascript_include_tag 'flexslider.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'lightbox.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'masonry.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'twitterfetcher.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'spectragram.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'ytplayer.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'countdown.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'smooth-scroll.min.js', 'data-turbolinks-track' => true %>
-<%#= javascript_include_tag 'parallax.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'scripts.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'flexslider.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'lightbox.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'masonry.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'twitterfetcher.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'spectragram.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'ytplayer.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'countdown.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'smooth-scroll.min.js', 'data-turbolinks-track' => true %>
+  <%#= javascript_include_tag 'parallax.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'scripts.js', 'data-turbolinks-track' => true %>
 
-<%= javascript_include_tag 'jquery.tagsinput/jquery.tagsinput.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'jquery.tagsinput/jquery.tagsinput.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag "https://js.stripe.com/v2/", 'data-turbolinks-track' => true %>
 
-<script>
-var ready = function() {
-  'use strict';
-  $('#tags_email_refers').tagsInput({
-    width: '100%',
-    defaultText: 'add email',
-    removeTitle: 'Remove Email',
-    inputReferType: 'email',
-  });
+  <script>
+    var ready = function() {
+      'use strict';
+      $('#tags_email_refers').tagsInput({
+        width: '100%',
+        defaultText: 'add email',
+        removeTitle: 'Remove Email',
+        inputReferType: 'email',
+      });
 
-  $('#tags_text_refers').tagsInput({
-    width: '100%',
-    defaultText: 'add phone',
-    removeTitle: 'Remove Phone',
-    inputReferType: 'phone',
-  });
-};
+      $('#tags_text_refers').tagsInput({
+        width: '100%',
+        defaultText: 'add phone',
+        removeTitle: 'Remove Phone',
+        inputReferType: 'phone',
+      });
 
-$('document').ready(ready);
-</script>
+      Stripe.setPublishableKey("#{Rails.application.secrets.stripe_publishable_key}");
+    };
 
+    $('document').ready(ready);
+  </script>
 <% end %>
