--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <% end %>
       </div>
       <div class="module widget-handle mobile-toggle right visible-sm visible-xs">
-        <i class="ti-menu"></i>
+        <i class="fa fa-bars"></i>
       </div>
       <div class="module-group right">
         <div class="module left">
@@ -30,13 +30,13 @@
               <ul>
                 <li>
                   <%= link_to edit_account_registration_path do %>
-                    <i class="ti ti-settings" style="font-size:11px"></i>
+                    <i class="fa fa-cogs" style="font-size:11px"></i>
                     SETTINGS
                   <% end %>
                 </li>
                 <li>
                   <%= link_to destroy_account_session_path, method: :delete do %>
-                    <i class="ti ti-close" style="font-size:11px"></i>
+                    <i class="fa fa-times" style="font-size:11px"></i>
                     LOGOUT
                   <% end %>
                 </li>
