--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -724,22 +724,22 @@
         <ul class="list-inline social-list">
           <li>
             <a href="#">
-              <i class="ti-twitter-alt"></i>
+              <i class="fa fa-twitter"></i>
             </a>
           </li>
           <li>
             <a href="#">
-              <i class="ti-facebook"></i>
+              <i class="fa fa-facebook"></i>
             </a>
           </li>
           <li>
             <a href="#">
-              <i class="ti-dribbble"></i>
+              <i class="fa fa-dribbble"></i>
             </a>
           </li>
           <li>
             <a href="#">
-              <i class="ti-vimeo-alt"></i>
+              <i class="fa fa-vimeo"></i>
             </a>
           </li>
         </ul>
