fuck themify, fontawesome

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
               <ul>
                 <li>
                   <%= link_to edit_account_registration_path do %>
-                    <i class="fa fa-cogs" style="font-size:11px"></i>
+                    <i class="fa fa-cog" style="font-size:11px"></i>
                     SETTINGS
                   <% end %>
                 </li>
