--- a/app/assets/stylesheets/ambassadors.scss
+++ b/app/assets/stylesheets/ambassadors.scss
@@ -76,10 +76,9 @@
   position:relative;
 }
 #my-people .status div:after  {
-  font-family: themify;
+  font-family: 'FontAwesome';
   font-size:16px;
   height:35px;
-  font-weight:bold;
   position: absolute;
   top:0;
   right:20px;
@@ -89,10 +88,10 @@
   padding-left:20px;
 }
 #my-people .status.registered div:after {
-  content: "\e64c";
+  content: "\f00c";
 }
 #my-people .status.active div:after {
-  content: "\e60c";
+  content: "\f135";
 }
 
 /* AJAX Overlay */
