--- a/app/views/accounts/registrations/new.html.erb
+++ b/app/views/accounts/registrations/new.html.erb
@@ -81,8 +81,8 @@
                 <%= hidden_field_tag 'registration_token', params[:registration_token] %>
                 <%= hidden_field_tag 'id', params[:id] %>
 
-                <%= hidden_field_tag 'token' %>
-                <%= hidden_field_tag 'plan_id' %>
+                <%#= hidden_field_tag 'token' %>
+                <%#= hidden_field_tag 'plan_id' %>
 
                 <input type="submit" id="register-btn" value="Register" />
 
