stripe bank accounts

--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -36,13 +36,16 @@
               </div>
               <div id="payment" class="tab-content">
                 <p class="mb8">
-                  Enter Your Bank Account Info In Order To Recieve Compensation For Your Referrals.
+                  <u>Current Account:</u>
+                  <%- if @stripe_bank_account %>
+                    <span class="bank-last4"><%= "XXXX#{@stripe_bank_account.last4}" %></span>
+                     with
+                    <span class="bank-name"><%= @stripe_bank_account.bank_name %></span>
+                  <% else %>
+                    Bank Account Not Set (you will be unable to collect compensation)
+                  <% end -%>
                 </p>
-                <p class="mb8">
-                  <u>Current Account:</u> Bank Account Not Set (you will be unable to collect compensation)
-                </p>
-                <%#= text_field_tag :country, '', placeholder: 'Account\'s Country', 'data-stripe': 'number' %>
-                <%= form_tag update_bank_account_path(id: current_account.id), method: :patch, id: 'bank-account-form' do %>
+                <%= form_tag update_bank_account_path(id: current_account.id), method: :patch do %>
                   <div class="row">
                     <div class="col-md-6 col-md-offset-3">
                       <p class="bank-errors bg-danger mb0"></p>
@@ -58,12 +61,18 @@
                       <%= hidden_field_tag :currency, 'USD', 'data-stripe': 'currency' %>
                       <div class="col-md-6 col-md-offset-3 mt16">
                         <%= button_tag(type: 'submit') do %>
-                        <i class="fa fa-bank"> Set Bank Account</i>
+                          <i class="fa fa-bank">
+                            <span class="bank-btn"><%= @stripe_bank_account ? " Edit " : " Add " %></span>
+                            Bank Account
+                          </i>
                         <% end %>
                       </div>
                     </div>
                   </div>
                 <% end %>
+                <p class="help-block mb8">
+                  Enter Your Bank Account Info In Order To Recieve Compensation For Your Referrals.
+                </p>
               </div>
             </li>
             <li>
@@ -378,7 +387,7 @@
     Stripe.setPublishableKey("<%= Rails.application.secrets.stripe_publishable_key %>");
 
     function stripeResponseHandler(status, response) {
-      var $form = $('#bank-account-form');
+      var $form = $('#payment > form');
 
       if (response.error) {
         // Show the errors on the form
@@ -390,7 +399,6 @@
         // Insert the token into the form so it gets submitted to the server
         $form.append($('<input type="hidden" name="stripe_bank_token" />').val(token));
         $("[data-stripe]").remove(); // remove stripe data from params
-
         // and submit
         $form.get(0).submit();
       }
@@ -398,7 +406,9 @@
       return false;
     };
 
-    $('body').on('submit', '#bank-account-form', function (event) {
+    $('body').on('submit', '#payment > form', function (event) {
+      event.preventDefault();
+
       var $form;
       $form = $(this);
       $form.find('button').prop("disabled", true);
