--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -175,7 +175,7 @@
             <form class="form-email" data-success="Thanks for your submission, we will be in touch shortly." data-error="Please fill all fields correctly.">
               <input type="text" class="validate-required" name="name" placeholder="Your Name">
               <input type="text" class="validate-required validate-email" name="email" placeholder="Email Address">
-              <textarea class="validate-required" name="message" rows="4" placeholder="Message"></textarea>
+              <textarea class="validate-required" name="message" rows="4" style="max-width: 100%;" placeholder="Message"></textarea>
               <input type="submit" value="Send Message">
             </form>
           </div>
