pretty large overhaul/

--- a/app/views/accounts/registrations/edit.html.erb
+++ b/app/views/accounts/registrations/edit.html.erb
@@ -96,7 +96,7 @@
 
                 <p class="mb0">
                   <i class="fa fa-arrow-circle-o-left"></i>
-                  <%= link_to "Back", :back, class: 'pull-right' %>
+                  <%= link_to "Back", root_path, class: 'pull-right' %>
                 </p>
               <% end %>
             <% end %>
