not logged in page

--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -27,11 +27,8 @@
   </div>
   <!-- preloader end -->
 
-
   <div class="wrapper" id="home">
-    <!--header start-->
-
-
+    <!-- header start-->
     <header class="header-full-width transparent-header ha-header ha-header-large" id="header">
       <div class="ha-header-perspective">
         <div class="ha-header-front">
@@ -40,7 +37,7 @@
               <div class="menuzord" id="massive-menu">
                 <!--logo start-->
                 <a class="logo-brand" href="index.html">
-                  <%= image_tag "https://storage.googleapis.com/siteassets/rsz_logo.png", alt:"", class:"retina", style:"width:200" %>>
+                  <%= image_tag "https://storage.googleapis.com/siteassets/rsz_logo.png", alt:"", class:"retina", style:"width:200" %>
                 </a>
                 <!--logo end-->
 
