--- a/app/views/statics/index.html.erb
+++ b/app/views/statics/index.html.erb
@@ -53,7 +53,7 @@
                     <a href="#experiences">THE EXPERIENCE</a>
                   </li>
                   <li class="">
-                    <a href="#join">JOIN US</a>
+                    <%= link_to "JOIN US", new_account_session_path %>
                   </li>
                   <li class="">
                     <a href="#console">MY CONSOLE</a>
