--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,50 +1,47 @@
-<div class="nav-container">
-  <nav>
-    <div class="nav-bar">
-      <div class="module left">
-        <%= link_to root_path, 'data-no-turbolink': true do %>
-          <%= image_tag 'logo-light.png', class: 'logo logo-light', alt: 'Foundry' %>
-          <%= image_tag 'logo-dark.png', class: 'logo logo-dark', alt: 'Foundry' %>
-        <% end %>
-      </div>
-      <div class="module widget-handle mobile-toggle right visible-sm visible-xs">
-        <i class="fa fa-bars"></i>
-      </div>
-      <div class="module-group right">
-        <div class="module left">
-          <ul class="menu">
-            <li>
-              <a href="#">THE MEMBERSHIP</a>
-            </li><li>
-              <%= link_to "MY PROFILE", home_page_path, 'data-no-turbolink': true %>
-            </li><li>
-              <a href="#"> </a>
-            </li>
-          </ul>
-        </div>
+<!--header start-->
+<header id="header" class="header-full-width sticky">
+  <div class="header-sticky light-header">
+    <div class="container">
+      <div id="massive-menu" class="menuzord menuzord-responsive">
+        <a href="javascript:void(0)" class="showhide" style="">
+          <em></em>
+          <em></em>
+          <em></em>
+        </a>
 
-        <div class="module widget-handle left">
-          <ul class="menu">
-            <li class="has-dropdown">
-              <a href="#"><%= current_account.meta.full_name %></a>
-              <ul>
-                <li>
-                  <%= link_to edit_account_registration_path do %>
-                    <i class="fa fa-cog" style="font-size:11px"></i>
-                    SETTINGS
-                  <% end %>
-                </li>
-                <li>
-                  <%= link_to destroy_account_session_path, method: :delete do %>
-                    <i class="fa fa-times" style="font-size:11px"></i>
-                    LOGOUT
-                  <% end %>
-                </li>
-              </ul>
+        <!--logo start-->
+        <%= link_to root_path, class: 'logo-brand', 'data-no-turbolink': true do %>
+          <%#= image_tag "logo.png", alt:"", class:"" %>
+          ODH
+        <% end %>
+        <!--logo end-->
+
+        <!--mega menu start-->
+        <ul class="menuzord-menu pull-right op-nav menuzord-indented scrollable" style="max-height: 400px;">
+          <li class="">
+            <a href="#home">POOLS</a>
+            <li class="EXPERIENCES">
             </li>
-          </ul>
-        </div>
+          </li>
+
+          <li class="">
+            <a href="#start">EXPERIENCES</a>
+          </li>
+
+          <li class="">
+            <a href="#team">AMBASSADORSHIP</a>
+          </li>
+
+          <li class="">
+            <a href="#portfolio">CONCIERGE</a>
+          </li>
+
+          <li class="">
+            <a href="#service">SETTINGS</a>
+          </li>
+        </ul>
       </div>
     </div>
-  </nav>
-</div>
+  </div>
+</header>
+<!--header end-->
