--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
  *= require ytplayer
  *= require theme-chipotle
 
+ *= require animate
  *= require selectize
  *= require selectize.bootstrap3
 
