--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -12,12 +12,52 @@
           <ul class="tabs">
             <li class="active">
               <div class="tab-title">
-                <span>BIO</span>
+                <span>This Week</span>
               </div>
-                <div class="tab-content">
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores.
-                </p>
+              <div class="tab-content">
+                <!-- expositions -->
+                <%= current_week
+                <div class="row mb40">
+                  <!-- home team -->
+                  <div class="col-md-6 home-team animated">
+                    <span class="number">+7.5</span>
+                    <h4 class="text-uppercase mb8">EAGLES</h4>
+                    <p>
+                      Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.
+                    </p>
+                  </div>
+                  <!-- /home team -->
+                  <!-- away team -->
+                  <div class="col-md-6 away-team animated">
+                    <span class="number">+7.5</span>
+                    <h4 class="text-uppercase mb8">EAGLES</h4>
+                    <p>
+                      Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.
+                    </p>
+                  </div>
+                  <!-- /away team -->
+                </div>
+
+                <div class="row mb40">
+                  <!-- home team -->
+                  <div class="col-md-6 home-team animated">
+                    <span class="number">+7.5</span>
+                    <h4 class="text-uppercase mb8">EAGLES</h4>
+                    <p>
+                      Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.
+                    </p>
+                  </div>
+                  <!-- /home team -->
+                  <!-- away team -->
+                  <div class="col-md-6 away-team animated">
+                    <span class="number">+7.5</span>
+                    <h4 class="text-uppercase mb8">EAGLES</h4>
+                    <p>
+                      Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Pellentesque eu quam sem, ac malesuada leo sem quam pellente.
+                    </p>
+                  </div>
+                  <!-- /away team -->
+                </div>
               </div>
             </li>
             <li>
@@ -92,138 +132,10 @@
   </div>
 </section>
 
-<section id="ambassador-console">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <h4 class="uppercase mb24">AMBASSADOR CONSOLE</h4>
-        <div class="tabbed-content button-tabs vertical">
-          <ul class="tabs">
-            <!-- Dashboard -->
-            <li id="dashboard" class="active">
-              <div class="tab-title">
-                <span>DASHBOARD</span>
-              </div>
-              <div class="tab-content">
-                <h5 class="uppercase">Let's Talk Your Numbers</h5>
-                <hr>
-                <p>
-                  Determine what may be useful/possible here
-                </p>
-              </div>
-            </li>
-            <!-- /Dashboard -->
+<%- if @ambassador %>
+  <%= render partial: 'ambassadors/console' %>
+<% end -%>
 
-            <!-- Spread the Word -->
-            <li id="spread-the-word">
-              <div class="tab-title">
-                <span>Spread the Word</span>
-              </div>
-              <div class="tab-content">
-                <h5 class="uppercase">Send Invites By Email Or Text</h5>
-                <hr>
-                <p>
-                  <div class="row" >
-                    <div class="col-md-12 col-sm-12 text-center">
-                      <div class="row">
-
-                        <%= form_tag send_referrals_path do %>
-                        <!-- Email-Referrals -->
-                        <div class="col-md-6">
-                          <div class="tab-title">
-                            <i class="icon fa fa-envelope-o"></i>
-                            <span>E-mail</span>
-                          </div>
-                          <%= text_field_tag :email_refers, '', id:'tags_email_refers' %>
-                        </div>
-                        <!-- /Email-Referrals -->
-
-                        <!-- Phone-Referrals -->
-                        <div class="col-md-6">
-                          <div class="tab-title">
-                            <i class="icon fa fa-mobile"></i>
-                            <span>TEXT</span>
-                          </div>
-                          <%= text_field_tag :text_refers, '', id:'tags_text_refers' %>
-                        </div>
-                        <!-- /Phone-Referrals -->
-
-                        <p class="help-block">Enter The Email Addresses or Phone Numbers You'd Like To Invite</p>
-
-                        <div class="col-md-12">
-                          <%= submit_tag "Invite" %>
-                        </div>
-                        <% end %>
-                      </div>
-                    </div>
-                  </div>
-                </p>
-              </div>
-            </li>
-            <!-- /Spread the Word -->
-
-            <!-- My People -->
-            <li id="my-people">
-              <div class="tab-title">
-                <span>MY PEOPLE</span>
-              </div>
-              <div class="tab-content">
-                <h5 class="uppercase">Prospects & Successes</h5>
-                <hr>
-                <p>
-                  <div class="row">
-                    <!-- Prospects -->
-                    <div class="col-md-6">
-                      <div class="widget">
-                        <h6 class="title text-center">Prospects</h6>
-                        <hr>
-                        <ul class="prospect accordion accordion-2">
-                          <%- @child_prospects.each do |cp| %>
-                            <li>
-                              <div class="title">
-                                <span id="child-title-<%= cp.id %>"><%= display_child_label(cp) %></span>
-                              </div>
-                              <div id="child-<%= cp.id %>" class="content">
-                                <%= render partial: 'ambassadors/prospect', locals: { child: cp } %>
-                              </div>
-                            </li>
-                          <% end -%>
-                        </ul>
-                      </div>
-                    </div>
-                    <!-- /Prospects -->
-
-                    <!-- Successes -->
-                    <div class="col-md-6">
-                      <div class="widget">
-                        <h6 class="title text-center">Successes</h6>
-                        <hr>
-                        <ul class="success accordion accordion-2">
-                          <%- @child_successes.each do |cs| %>
-                            <li>
-                              <div class="title">
-                                <span><%= cs.full_name %></span>
-                              </div>
-                              <div id="child-<%= cs.id %>" class="content">
-                                <%= render partial: 'ambassadors/success', locals: { child: cs } %>
-                              </div>
-                            </li>
-                          <% end -%>
-                        </ul>
-                      </div>
-                    </div>
-                    <!-- /Successes -->
-                  </div>
-                </p>
-              </div>
-            </li>
-            <!-- /My People -->
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!--
 <section>
@@ -382,7 +294,12 @@
         removeTitle: 'Remove Phone',
         inputReferType: 'phone',
       });
+
+      $('div.home-team').addClass('fadeInLeft');
+      $('div.away-team').addClass('fadeInRight');
     };
+
+    $('document').ready(ready);
 
     Stripe.setPublishableKey("<%= Rails.application.secrets.stripe_publishable_key %>");
 
@@ -421,6 +338,5 @@
       return false;
     });
 
-    $('document').ready(ready);
   </script>
 <% end %>
