--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -16,8 +16,8 @@
               </div>
               <div class="tab-content">
                 <!-- expositions -->
-                <%= current_week.expositions.each do |expo| %>
-                <% end %>
+                <%#= current_week.expositions.each do |expo| %>
+                <%# end %>
                 <div class="row mb40">
                   <!-- home team -->
                   <div class="col-md-6 home-team animated">
